--- a/blog/netlify.toml
+++ b/blog/netlify.toml
@@ -1,7 +1,3 @@
 [build]
-publish = "_site"
-command = "bundle install && bundle exec jekyll build"
-
-
-[build.environment]
-RUBY_VERSION = "3.2.2"
+  command = "jekyll build"
+  publish = "_site"
