--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,22 +3,18 @@ description: IT, websites, SEO, and growth — by Reema Roy.
 baseurl: "/blog"
 url: "https://www.bizznist.com"
 
-# Build settings
 markdown: kramdown
 permalink: "/blog/:title/"
 
-# Plugins
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
-# Collections & defaults
 collections:
   posts:
     output: true
     permalink: "/blog/:title/"
 
-# Defaults for posts
 defaults:
   - scope:
       path: ""
@@ -26,3 +22,5 @@ defaults:
     values:
       layout: post
       is_post: true
+
+uploads_dir: assets/uploads/blog
