--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,7 +13,8 @@ plugins:
 collections:
   posts:
     output: true
-    permalink: "/blog/:title/"
+    permalink: /blog/:title/
+
 
 defaults:
   - scope:
