--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,11 @@ defaults:
       type: posts
     values:
       layout: post
+
+plugins:
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+paginate: 6
+paginate_path: "/blog/page:num/"
