--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,13 +13,18 @@ publish_mode: simple
 collections:
   - name: "posts"
     label: "Posts"
-    folder: "blog/_posts"    # make sure this folder exists in your repo
+    folder: "_posts"   # make sure this matches your repo
     create: true
     extension: "md"
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"   # CMS will auto-generate from Title, but we’ll also add a custom field
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Custom URL Slug", name: "custom_slug", widget: "string", required: false, hint: "Leave empty to auto-generate" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Author", name: "author", widget: "string", default: "Reema Roy" }
       - { label: "Featured Image", name: "image", widget: "image", required: false }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Body", name: "body", widget: "richtext" }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Description", name: "meta_description", widget: "text", required: false }
+      - { label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false }
+      
