--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Author", name: "author", widget: "string", default: "Reema Roy" }
       - { label: "Featured Image", name: "image", widget: "image", required: false }
-      - { label: "Body", name: "body", widget: "richtext" }
+      - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
       - { label: "Meta Description", name: "meta_description", widget: "text", required: false }
       - { label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false }
