--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,25 +5,25 @@ backend:
 site_url: https://bizznist-blogs.netlify.app
 display_url: https://bizznist-blogs.netlify.app
 
-media_folder: "assets/uploads"   # where images get stored in your repo
-public_folder: "/assets/uploads" # how images are referenced on the site
+media_folder: "assets/uploads/blog"   # where images get stored in your repo
+public_folder: "/assets/uploads/blog" # how images are referenced on the site
 
 publish_mode: simple
 
 collections:
   - name: "posts"
     label: "Blog"
-    folder: "blog/_posts"   # make sure this matches your repo
+    folder: "blog/_posts"   # matches your repo folder
     create: true
     extension: "md"
-    slug: "{{slug}}"   # CMS will auto-generate from Title, but we’ll also add a custom field
+    slug: "{{slug}}"
     fields:
-  - {label: "Title", name: "title", widget: "string"}
-  - {label: "Custom URL Slug", name: "slug", widget: "string", required: false}
-  - {label: "Publish Date", name: "date", widget: "datetime"}
-  - {label: "Author", name: "author", widget: "string"}
-  - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
-  - {label: "Body", name: "body", widget: "markdown"}
-  - {label: "Meta Title", name: "meta_title", widget: "string", required: false}
-  - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
-  - {label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Custom URL Slug", name: "slug", widget: "string", required: false}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Author", name: "author", widget: "string"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Meta Title", name: "meta_title", widget: "string", required: false}
+      - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
+      - {label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false}
