--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,13 +13,13 @@ publish_mode: simple
 collections:
   - name: "posts"
     label: "Blog"
-    folder: "blog/_posts"   # matches your repo folder
+    folder: "blog/_posts"
     create: true
     extension: "md"
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"   # filename format
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Custom URL Slug", name: "slug", widget: "string", required: false}
+      - {label: "Custom URL Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
