--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,9 @@ defaults:
 
 paginate: 10
 paginate_path: "/blog/page:num/"
+
+
+url: "https://www.bizznist.com"   
+baseurl: ""                  
+plugins:
+  - jekyll-sitemap
