--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,19 +1,17 @@
 backend:
   name: git-gateway
-  branch: main   # or the branch your site deploys from
+  branch: main
 
 site_url: https://bizznist-blogs.netlify.app
 display_url: https://bizznist-blogs.netlify.app
 
-media_folder: "assets/uploads/blog"   # where images get stored in your repo
-public_folder: "/assets/uploads/blog" # how images are referenced on the site
+media_folder: "assets/uploads/blog"
+public_folder: "/assets/uploads/blog"
 
 publish_mode: simple
 
-# Enable custom editor settings
 editor:
   preview: true
-  # Show toolbar buttons
   buttons:
     - bold
     - italic
@@ -22,16 +20,6 @@ editor:
     - numbered-list
     - quote
     - code
-  # Add custom components like tables
-  components:
-    - label: "Table"
-      id: "table"
-      fields:
-        - { label: "Table Markdown", name: "body", widget: "text" }
-      pattern: /^(\|.+\|)+$/s
-      fromBlock: (match) => match[0]
-      toBlock: (obj) => obj.body
-      toPreview: (obj) => `<div style="overflow-x:auto;"><pre>${obj.body}</pre></div>`
 
 collections:
   - name: "posts"
@@ -39,14 +27,15 @@ collections:
     folder: "blog/_posts"
     create: true
     extension: "md"
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"   # filename format
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Custom URL Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Custom URL Slug", name: "slug", widget: "string"}
       - {label: "Meta Title", name: "meta_title", widget: "string", required: false}
       - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
       - {label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false}
+      - {label: "Table", name: "table", widget: "table"}   # 👈 Custom widget
