--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,4 +38,4 @@ collections:
       - {label: "Meta Title", name: "meta_title", widget: "string", required: false}
       - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
       - {label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false}
-      - {label: "Table", name: "table", widget: "table"}   # 👈 Custom widget
+      - {label: "Table", name: "table", widget: "table"}   # uses the custom widget
