--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,12 +20,13 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"   # filename format
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Custom URL Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Custom URL Slug", name: "slug", widget: "string"}
       - {label: "Meta Title", name: "meta_title", widget: "string", required: false}
       - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
       - {label: "Meta Keywords", name: "meta_keywords", widget: "list", required: false}
+      - {label: "Table", name: "table", widget: "table" }
 
