--- a/admin/config.yml
+++ b/admin/config.yml
@@ -24,7 +24,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Featured Image", name: "thumbnail", widget: "image", required: false }
-      - { label: "Body", name: "body", widget: "markdown" , editor_components: "table" }
+      - { label: "Body", name: "body", widget: "markdown"  }
       - { label: "Custom URL Slug", name: "slug", widget: "string" }
       - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
       - { label: "Meta Description", name: "meta_description", widget: "text", required: false }
