--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,3 +44,15 @@ collections:
           - { label: "Second Ad", name: "ad-slot-1", widget: "text" }
           - { label: "In-image Ad", name: "ad-slot-inimage", widget: "text" }
           - { label: "Sidebar Ad", name: "ad-slot-sidebar", widget: "text" }
+
+      - label: "Head Scripts"
+        name: "head-scripts"
+        file: "assets/includes/head-includes.html"
+        fields:
+          - { label: "Head Code", name: "body", widget: "code", default: "", required: false }
+
+      - label: "Body Scripts"
+        name: "body-scripts"
+        file: "assets/includes/body-includes.html"
+        fields:
+          - { label: "Body Code", name: "body", widget: "code", default: "", required: false }
