--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,10 +40,13 @@ collections:
         file: "content/data/ads.json"
         format: "json"
         fields:
-          - { label: "Main Ad", name: "ad-slot", widget: "text" }
-          - { label: "Second Ad", name: "ad-slot-1", widget: "text" }
-          - { label: "In-image Ad", name: "ad-slot-inimage", widget: "text" }
-          - { label: "Sidebar Ad", name: "ad-slot-sidebar", widget: "text" }
+          - label: "Ad Blocks"
+            name: ""
+            widget: "list"
+            summary: "{{fields.id}}"
+            fields:
+              - { label: "Ad Slot ID", name: "id", widget: "string" }
+              - { label: "Ad Code", name: "code", widget: "text" }
 
   # ✅ Global Script Injects (HTML-based)
   - name: "global-scripts"
